<resources>
    <string name="app_name">Sophos Mobile App</string>
    <string name="logo_description">Sophos Logo</string>
    <string name="signin_message">Enter your data to access</string>
    <string name="input_password">Password</string>
    <string name="input_email">Email</string>
    <string name="button_signin">Sign In</string>
    <string name="button_fingerprint">Sign in with fingerprint</string>
    <string name="welcome_sophos">Welcome Sophos</string>
    <string name="send_documents">Send documents</string>
    <string name="button_main">Enter</string>
    <string name="view_documents">View documents</string>
    <string name="offices">Offices</string>
    <string name="menu_light_theme">Dark theme</string>
    <string name="menu_dark_theme">Light theme</string>
    <string name="menu_language">Spanish language</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="toolbar_title">Back</string>
    <string name="send_document_title">Sending documentation</string>
    <string name="view_document_title">Documents</string>
    <string name="spinner_cities">Cities</string>
    <string name="image_send_description">Document image</string>
    <string name="text_type_document">Document type:</string>
    <string name="text_city">City:</string>
    <string name="text_file_type">Attachment Type</string>
    <string name="text_document_number">Document number</string>
    <string name="text_user_names">Names</string>
    <string name="text_user_lastname">Last name</string>
    <string name="publication_date">Publication date:</string>
    <string name="text_sent_by">Sent by:</string>
    <string name="dialog_title_add_img">Select an option</string>
    <string name="dialog_select_img">Select photo from gallery</string>
    <string name="dialog_open_camera">Take photo from camera</string>
    <string name="title_fragment_map">Offices</string>
    <string name="map_title_marker">Your Current Location</string>
    <string name="submit_form_id_warning">Please enter a ID</string>
    <string name="submit_form_name_warning">Please enter a name</string>
    <string name="submit_form_lastname_warning">Please enter a lastname</string>
    <string name="submit_form_email_warning">Please enter a email</string>
    <string name="submit_form_image_warning">Please add an image</string>
    <string name="view_document_image">Document image</string>
    <string name="no_records_available">No records available!</string>
    <string name="button_send_document">Send</string>
    <string name="message_invalid_emailpassword">Email or password is invalid</string>
    <string name="message_alert_empty_fields">Please fill all fields</string>
    <string name="message_saved_document">Document added to API</string>
    <string name="message_error_send_document">Network or server connection error</string>
    <string name="descr_corporate_image">Corporate image</string>
    <string name="error_message_documents_viewmodel">Error getting documents!</string>
    <string name="error_message_officesmap_viewmodel">Network error!</string>
</resources>