<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.activities.SendDocumentActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSendDocs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/MyToolbarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTitleSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/send_document_title"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbarSendDocs" />

            <ImageView
                android:id="@+id/imageViewPhoto"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/image_send_description"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitleSend"
                app:srcCompat="@drawable/camera_photo" />

            <TextView
                android:id="@+id/textViewDocument"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_type_document"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPhoto" />

            <Spinner
                android:id="@+id/spinnerDocument"
                android:layout_width="90dp"
                android:layout_height="42dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/spinner_cities"
                android:theme="@style/Spinner"
                app:layout_constraintBottom_toBottomOf="@+id/textViewDocument"
                app:layout_constraintStart_toEndOf="@+id/textViewDocument"
                app:layout_constraintTop_toTopOf="@+id/textViewDocument" />

            <EditText
                android:id="@+id/editTextDocNumber"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_document_icon"
                android:ems="10"
                android:hint="@string/text_document_number"
                android:inputType="number"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDocument" />

            <EditText
                android:id="@+id/editTextNames"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/text_user_names"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDocNumber" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/text_user_lastname"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNames" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />

            <EditText
                android:id="@+id/editTextFileType"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/text_file_type"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="15dp"
                android:text="@string/text_city"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFileType" />

            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="180dp"
                android:layout_height="42dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/spinner_cities"
                android:theme="@style/Spinner"
                app:layout_constraintBottom_toBottomOf="@+id/textViewCity"
                app:layout_constraintStart_toEndOf="@+id/textViewCity"
                app:layout_constraintTop_toTopOf="@+id/textViewCity" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSendDocument"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/send_doc_button_effect"
                android:text="@string/button_send_document"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCity" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>