<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dialog_title_add_img"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            app:srcCompat="@drawable/ic_file_add" />

        <TextView
            android:id="@+id/textViewGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/dialog_select_img"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            app:srcCompat="@drawable/ic_add_a_photo" />

        <TextView
            android:id="@+id/textViewCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.82"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/dialog_open_camera"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>