<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="360dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textViewTitleDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.24"
            android:text="@string/publication_date"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.76"
            android:text="10/12/22"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textViewTitleDocument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/text_type_document"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDocument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.97"
            android:text="Cédula"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textViewTitleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.53"
            android:text="@string/text_sent_by"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.47"
            android:text="Nombre y apellido"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>